# audio-selector

./: .gitignore  Cargo.toml  README.md  SPEC.md  libxdo-dev_1%3a3.20160805.1-5.1build1_amd64.deb  libxdo3_1%3a3.20160805.1-5.1build1_amd64.deb  release.ps1  release.sh  reproduce_bt_issue.rs  run_test.sh  run_watcher.sh
.github/workflows/: build.yml
docs/: index.html
docs/assets/: style.css
examples/: generate_icon.rs  process_icon.rs  test_slint.rs
src/: audio.rs  audio_windows.rs  bluetooth.rs  config.rs  i18n.rs  main.rs  utils.rs
ui/: appwindow.slint
