[package]
name = "audio-selector"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sys-locale = "0.3.2"
chrono = "0.4.45"
dirs = "6.0.0"
env_logger = "0.11.11"
log = "0.4.33"
image = "0.25.10"
tray-icon = { version = "0.24.1", default-features = false, features = ["gtk"] }
gtk = "0.18.2"


[build-dependencies]
slint-build = "1.8.0"
