[package]
name = "audio-selector"
version = "1.8.4"
edition = "2021"

[dependencies]
slint = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sys-locale = "0.3.2"
chrono = "0.4.45"
image = "0.25.10"
imageproc = "0.27.0"
ab_glyph = "0.2.32"
dirs = "6.0.0"
env_logger = "0.11.11"
log = "0.4.33"
tray-icon = { version = "0.24.1", default-features = false, features = ["gtk"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Foundation",
]

[build-dependencies]
slint-build = "1.8.0"
