[package]
name = "audio-selector"
version = "1.9.0"
edition = "2021"

[dependencies]
slint = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sys-locale = "0.3.2"
chrono = "0.4.45"
image = "0.25.10"
imageproc = "0.27.0"
ab_glyph = "0.2.32"
dirs = "6.0.0"
tray-icon = { version = "0.24.1", default-features = false, features = ["gtk"] }
gtk = "0.18.2"
rust-embed = "8.11.0"
walkdir = "2.5.0"

[build-dependencies]
slint-build = "1.8.0"
